BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/KPI_Rep_Calls_by_Level_BMS_CN__c.object
<CustomObject>
    <fields>
        <fullName>Account_BMS_CN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>KPI Rep Calls by Level</relationshipLabel>
        <relationshipName>KPI_Rep_Calls_by_Level</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Act_Calls_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Act Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dr_Level_BMS_CN__c</fullName>
        <label>Dr Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsp_Name_BMS_CN__c</fullName>
        <formula>Account_BMS_CN__r.Primary_Parent_vod__r.Primary_Parent_vod__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hsp Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI_Rep_Call_Summary_CN__c</fullName>
        <label>KPI Rep Call Summary</label>
        <referenceTo>KPI_Rep_Call_BMS_CN__c</referenceTo>
        <relationshipLabel>KPI Rep Calls by Level</relationshipLabel>
        <relationshipName>KPI_Rep_Calls_by_Level</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Need_to_Call_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Need to Call</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>KPI Rep Calls by Level</label>
    <nameField>
        <displayFormat>KRCL-{0000}</displayFormat>
        <label>KPI Rep Calls by Level Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPI Rep Calls by Level</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>